[UPDATE] 支持从下划线取参
Signed-off-by: Alan Yeh <alan@yeh.cn>